<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36DCE2"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/calculateResultButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="39dp"
        android:text="@string/calculate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearAllButton"
        app:layout_constraintTop_toBottomOf="@+id/unitTypeSpinner" />

    <TextView
        android:id="@+id/unitTypeLabel"
        android:layout_width="408dp"
        android:layout_height="61dp"
        android:layout_marginBottom="4dp"
        android:background="#F9BB5E"
        android:text="@string/unit_type"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/unitTypeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/convertedToUnitLabel"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginBottom="4dp"
        android:background="#EFC3CA"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/destinationUnitSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Converted to" />

    <Spinner
        android:id="@+id/unitTypeSpinner"
        android:layout_width="416dp"
        android:layout_height="0dp"
        android:layout_marginBottom="543dp"
        android:background="#B094F2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calculateResultButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group" />

    <TextView
        android:id="@+id/convertingFromLabel"
        android:layout_width="418dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:background="#EFC3CA"
        android:text="@string/converting_from"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sourceUnitSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/destinationUnitSpinner"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginBottom="8dp"
        android:background="#73D44D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/printResultValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/valueToConvert"
        android:layout_width="415dp"
        android:layout_height="107dp"
        android:layout_marginBottom="4dp"
        android:background="#E8E8E8"
        android:ems="10"
        android:hint="@string/source_unit_input"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/convertedToUnitLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sourceUnitSpinner"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginBottom="4dp"
        android:background="#73D44D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/valueToConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/printResultValue"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginVertical="5dp"
        android:layout_marginBottom="16dp"
        android:background="#E8E8E8"
        android:fontFamily="sans-serif"
        android:hint="@string/conversion_result_will_show_here"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calculateResultButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearAllButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="39dp"
        android:text="@string/clear_all"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calculateResultButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printResultValue"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="155dp"
        app:layout_constraintBottom_toTopOf="@+id/unitTypeSpinner"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unitConverterTitle"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_light_background"
        android:text="@string/unitConverterTitle"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/unitTypeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>